# ouroboreport

./: .gitignore  LICENSE  Makefile  README.md  poetry.toml  pylintrc  pyproject.toml
ouroboreport/: renderers.py  report.py
pyreport/: components.py  renderers.py  report.py  shared.py
tests/: test_components.py  test_renderers.py  test_report.py  test_shared.py
